--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -71,6 +71,10 @@ a.more {
     }
 }
 
+.rays-light-blue #outer-wrapper {
+    background: #c3dcf2 url(/media/img/sandstone/bg-rays-white.png) top right no-repeat;
+}
+
 // Aurora visual style
 .space {
     color: #fff;
