Bug 1008653 - Fix History slides for Ukranian (uk)

--- a/media/css/mozorg/history-slides.less
+++ b/media/css/mozorg/history-slides.less
@@ -1008,6 +1008,7 @@
 [lang='lt'] .on #fact06 .message,
 [lang='pl'] .on #fact06 .message,
 [lang='sr'] .on #fact06 .message,
+[lang='uk'] .on #fact06 .message,
 [lang='uz'] .on #fact06 .message {
     padding: 25px 130px 15px 50px;
 }
@@ -1176,6 +1177,10 @@
     }
 }
 
+// Fact @08 Fixes for specific locales
+[lang='uk'] .on #fact08 .message {
+    padding: 20px 40px 20px 40px;
+}
 
 
 /*--------------------------------------------------------------------------*/
@@ -1422,7 +1427,8 @@
 // Fact @10 Fixes for specific locales
 [lang='bg'] .on #fact10 .message,
 [lang^='es'] .on #fact10 .message,
-[lang='it'] .on #fact10 .message {
+[lang='it'] .on #fact10 .message,
+[lang='uk'] .on #fact10 .message {
     padding: 30px 40px 26px 40px;
 }
 
@@ -2018,7 +2024,8 @@
 // Fact @14 Fixes for specific locales
 [lang='ru'] .on #fact14 .message,
 [lang='sq'] .on #fact14 .message,
-[lang='ta'] .on #fact14 .message {
+[lang='ta'] .on #fact14 .message,
+[lang='uk'] .on #fact14 .message {
     padding: 20px 50px 10px 30px;
 }
 
