--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -12,6 +12,16 @@
   {% stylesheet 'firefox_family' %}
 {% endblock %}
 
+{% block extrahead %}
+  {{ super() }}
+<!--[if lt IE 8]>
+  {% stylesheet 'firefox_family_ie' %}
+<![endif]-->
+{% endblock %}
+
+{% block tabzilla_css %}{% endblock %}
+{% block tabzilla_js %}{% endblock %}
+
 {% block body_class %}mozid{% endblock %}
 
 {% block site_header %}{% endblock %}
