Bug 1148127 - point home page Firefox link to family page

--- a/bedrock/mozorg/templates/mozorg/home/home-new.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-new.html
@@ -89,7 +89,7 @@
       <ul id="nav-main-menu">
         <li class="first"><a data-name="donate" href="{{ donate_url('mozillaorg_topNAV') }}">{{_('Donate')}}</a></li>
         <li><a data-name="mission" href="{{ url('mozorg.mission') }}">{{_('Mission')}}</a></li>
-        <li><a data-name="firefox" href="{{ url('firefox.desktop.index') }}">{{_('Firefox')}}</a></li>
+        <li><a data-name="firefox" href="{{ url('firefox.family.index') }}">{{_('Firefox')}}</a></li>
         <li class="last"><a data-name="community" href="{{ url('mozorg.contribute') }}">{{_('Community')}}</a></li>
       </ul>
     </nav>
