Fix Bug 1136660 - Make product wordmarks high resolution

--- a/bedrock/firefox/templates/firefox/channel.html
+++ b/bedrock/firefox/templates/firefox/channel.html
@@ -44,7 +44,7 @@
   <div class="pager-content">
 
     <div id="beta" class="pager-page">
-      <h2 class="channel-title channel-title-beta"><img src="{{ static('img/firefox/channel/title-beta.png') }}" alt="Firefox Beta" /></h2>
+      <h2 class="channel-title channel-title-beta">{{ high_res_img('img/firefox/channel/title-beta.png', {'alt': 'Firefox Beta', 'width': '441', 'height': '74'}) }}</h2>
       {# L10n: This description applies to Firefox Beta #}
       <h3>{{_('The latest features in a more stable environment')}}</h3>
       <div class="download-box" id="beta-desktop">
@@ -68,7 +68,7 @@
     </div>
 
     <div id="firefox" class="pager-page">
-      <h2 class="channel-title channel-title-firefox"><img src="{{ static('img/firefox/channel/title-firefox.png') }}" alt="Firefox" /></h2>
+      <h2 class="channel-title channel-title-firefox">{{ high_res_img('img/firefox/channel/title-firefox.png', {'alt': 'Firefox', 'width': '258', 'height': '74'}) }}</h2>
       {# L10n: This description applies to Firefox on the Release channel #}
       <h3>{{_('Tried, tested and used by millions around the world')}}</h3>
       <div class="download-box" id="firefox-desktop">
