--- a/bedrock/firefox/templates/firefox/organizations/faq.html
+++ b/bedrock/firefox/templates/firefox/organizations/faq.html
@@ -9,7 +9,7 @@
 {% block body_id %}organizations-faq{% endblock %}
 
 {% block site_header_logo %}
-<h1><a href="{{ url('firefox.organizations.organizations') }}"><img src="{{ static('img/firefox/organizations/title.png') }}" alt="{{ _('Firefox ESR') }}" height="68" width="299"></a></h1>
+<h1><a href="{{ url('firefox.organizations.organizations') }}">{{ high_res_img('img/firefox/organizations/title.png', {'alt': _('Firefox ESR'), 'width': '253', 'height': '70'}) }}</a></h1>
 {% endblock %}
 
 {% block main_feature %}
