--- a/bedrock/mozorg/templates/mozorg/home/home-new.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-new.html
@@ -269,7 +269,7 @@
     <div class="container">
       <header>
         <a href="{{ url('firefox') }}" id="firefox-promo-link">
-          <h3><img src="{{ static('img/home/voices/firefox-logo-wordmark-white.png') }}" alt="Firefox"></h3>
+          <h3>{{ high_res_img('img/home/voices/firefox-logo-wordmark-white.png', {'alt': 'Firefox'}) }}</h3>
           {# L10n: <strong> tags below are for visual formatting only. #}
           <h4>{{_('Committed to <strong>you, your privacy</strong> and an <strong>open Web</strong>')}}</h4>
         </a>
