--- a/media/css/firefox/desktop/tips.less
+++ b/media/css/firefox/desktop/tips.less
@@ -35,7 +35,7 @@
     background: #dfe6eb;
 
     .logo a {
-        background: url(/media/img/sandstone/footer-mozilla-dark.png);
+        .at2x('/media/img/sandstone/footer-mozilla-dark.png', 93px, 24px);
     }
 }
 
