--- a/media/css/mozorg/home/home.less
+++ b/media/css/mozorg/home/home.less
@@ -786,11 +786,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .logo a {
-        display: block;
-        width: 88px;
-        height: 24px;
-        background-image: url(/media/img/sandstone/footer-mozilla-white.png);
-        .image-replaced();
+        .at2x('/media/img/sandstone/footer-mozilla-white.png', 93px, 24px);
     }
 }
 
