--- a/bedrock/firefox/templates/firefox/organizations/organizations.html
+++ b/bedrock/firefox/templates/firefox/organizations/organizations.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block site_header_logo %}
-<h2><a href="{{ url('firefox.organizations.organizations') }}"><img src="{{ static('img/firefox/organizations/title.png') }}" alt="{{ _('Firefox ESR') }}" height="68" width="299"></a></h2>
+<h2><a href="{{ url('firefox.organizations.organizations') }}">{{ high_res_img('img/firefox/organizations/title.png', {'alt': _('Firefox ESR'), 'width': '253', 'height': '70'}) }}</a></h2>
 {% endblock %}
 
 
