--- a/bedrock/firefox/templates/firefox/releases/os-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/os-notes.html
@@ -9,7 +9,7 @@
 {% set channel_name = 'Firefox OS' %}
 
 {% block site_header_logo %}
-<h2><a href="{{ url('firefox.os.index') }}"><img src="{{ static('img/firefox/os/template/header-logo.png') }}" alt="Mozilla Firefox OS" height="70" width="220" data-inverse-src="{{ static('img/firefox/os/template/header-logo-inverse.png') }}"></a></h2>
+<h2><a href="{{ url('firefox.os.index') }}">{{ high_res_img('img/firefox/os/template/header-logo.png', {'alt': 'Firefox OS', 'width': '220', 'height': '70'}) }}</a></h2>
 {% endblock %}
 
 {% block notes_header %}
