--- a/media/css/privacy/privacy-day.less
+++ b/media/css/privacy/privacy-day.less
@@ -38,7 +38,7 @@
     background: #dfe6eb;
 
     .logo a {
-        background: url(/media/img/sandstone/footer-mozilla-dark.png);
+        .at2x('/media/img/sandstone/footer-mozilla-dark.png', 93px, 24px);
     }
 }
 
