--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -735,7 +735,7 @@ nav.menu-bar {
     .logo a {
         .image-replaced();
         display: inline-block;
-        background: url(/media/img/sandstone/footer-mozilla.png) left top no-repeat;
+        .at2x('/media/img/sandstone/footer-mozilla.png', 93px, 24px);
         width: 93px;
         height: 24px;
     }
