--- a/bedrock/firefox/templates/firefox/os/ver/1.3.html
+++ b/bedrock/firefox/templates/firefox/os/ver/1.3.html
@@ -4,7 +4,7 @@
 
 {% extends "firefox/os/index-new.html" %}
 
-{% add_lang_files "firefox/os/devices" %}
+{% add_lang_files "firefox/os/index-new" "firefox/os/devices" %}
 
 {# Search engines should only index latest Firefox OS 2.0 template #}
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
