--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -582,6 +582,7 @@ html[lang^='en'] {
 .download-button .os_linux64,
 // Uncomment this to enable the win64 download buttons:
 // .win7up.x86.x64 .download-button-aurora .os_win,
+.android .download-button-desktop,
 .windows.arm .download-button .os_win,
 .linux.arm .download-button .os_linux,
 .linux.x86.x64 .download-list .os_linux,
