--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -162,6 +162,43 @@ a.more {
 
 }
 
+// mozID visual style
+// full width rows w/differing bg colors
+.mozID {
+    a:link,
+    a:active,
+    a:focus,
+    a:visited {
+        color: #fff;
+
+        &:hover,
+        &:focus {
+            text-decoration: underline;
+        }
+    }
+
+    h1, h2, h3, h4, h5, h6, .huge, .large {
+        color: #fff;
+        text-shadow: none;
+    }
+
+    #wrapper {
+        width: 100%;
+
+        .container {
+            width: @widthDesktop - (@baseLine * 2);
+            padding-left: @baseLine;
+            padding-right: @baseLine;
+        }
+    }
+
+    #masthead {
+        z-index: 10;
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
 html[dir='rtl'] #masthead nav {
     float: left;
 }
