Bug 1151355. Fx family nav on old sync pages.
- Bug 1150558. Padding/spacing on desktop subnav items.

--- a/media/css/firefox/family-nav.less
+++ b/media/css/firefox/family-nav.less
@@ -326,11 +326,14 @@
                 opacity: 1;
             }
 
-            &.selected:before {
+            &:before {
                 content: '';
                 width: 15px;
                 height: 16px;
                 display: inline-block;
+            }
+
+            &.selected:before {
                 .fxfamilynav-sprite(-257px);
             }
         }
