--- a/media/css/firefox/sync-old.less
+++ b/media/css/firefox/sync-old.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/lib.less";
 
+#wrapper {
+    padding-top: 30px; // family nav
+}
+
 #wrapper:before {
     content: " ";
     position: absolute;
